--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "homepage": "https://adrozs.github.io/React_Website/",
   "name": "react-website",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://adrozs.github.io/React_Website",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
