--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
+  "homepage": "https://adrozs.github.io/React_Website",
   "name": "react-website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://adrozs.github.io/React_Website",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.4"
+    "gh-pages": "^6.1.1",
+    "vite": "^5.2.6"
   }
 }
