--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adrozs.github.io/React_Website/",
+  "homepage": "https://adrozs.github.io/React_Website",
   "name": "react-website",
   "private": true,
   "version": "0.0.0",
